# boolean-retrieval

./: Cargo.toml  README.md
data/: entities.txt
src/: app.rs  main.rs  model.rs
